Prevent select overflow in iOS
See https://github.com/scottjehl/Device-Bugs/issues/68

--- a/scss/baseguide/components/_forms.scss
+++ b/scss/baseguide/components/_forms.scss
@@ -80,6 +80,7 @@ label {
 }
 
 select {
+	overflow-x: hidden;
 	appearance: menulist;
 
 	&[multiple],
